--- a/src/template.html
+++ b/src/template.html
@@ -17,7 +17,7 @@
   </head>
 
   <body>
-    <div id="top"></div>
+    <!-- <div id="top"></div>
     <div id="hero" class="jumbotron">
       <div class="container">
         <h1 class="hero-title" class="load-hidden">
@@ -29,9 +29,9 @@
           <a class="cta-btn cta-btn--hero" href="#about">Know More</a>
         </p>
       </div>
-    </div>
+    </div> -->
 
-    <section id="about">
+    <!-- <section id="about">
       <div class="container">
         <h2 class="section-title">
           About Me
@@ -46,11 +46,9 @@
                 Developed drag-and-drop, WUSIWUG web-application to allow users to create and configure commerce web pages dynamically under multi-tenant, multi-customer, cross-browser, cross-device application using Angular JS, HTML, CSS and Bootstrap.<br>
                 Also used Adobe XD for creating wireframes, prototypes, and screen designs for digital products such as websites and mobile apps.
               </p>
-              <span class="d-flex mt-3">
-                <a target="_blank" class="cta-btn cta-btn--resume" href="/src/assets/Resume-Parth_Shah.jpg">
-                  View Resume
-                </a>
-              </span>
+              <span class="d-flex mt-3"> -->
+                <img src="/src/assets/Resume-Parth_Shah.jpg"></img>
+              <!-- </span>
             </div>
           </div>
 
@@ -169,6 +167,6 @@
           </a>
         </div>
       </div>
-    </footer>
+    </footer> -->
   </body>
 </html>
