--- a/src/template.html
+++ b/src/template.html
@@ -47,7 +47,7 @@
                 Also used Adobe XD for creating wireframes, prototypes, and screen designs for digital products such as websites and mobile apps.
               </p>
               <span class="d-flex mt-3"> -->
-                <img src="/src/assets/Resume-Parth_Shah.jpg"></img>
+                <img src="./src/assets/Resume-Parth_Shah.jpg"></img>
               <!-- </span>
             </div>
           </div>
